--- a/external-secrets/external-secrets.yaml
+++ b/external-secrets/external-secrets.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   destination:
     name: ''
-    namespace: cert-man
+    namespace: dev
     server: 'https://kubernetes.default.svc'
   source:
     path: charts/kubernetes-external-secrets
