--- a/cert-manager/cert.yaml
+++ b/cert-manager/cert.yaml
@@ -14,6 +14,8 @@ spec:
       parameters:
         - name: installCRDs
           value: "true"
+        - name: replicaCount
+          value: 3
     repoURL: https://charts.jetstack.io
     targetRevision: v1.3.1
   syncPolicy:
