--- a/cert-manager/cert.yaml
+++ b/cert-manager/cert.yaml
@@ -2,7 +2,7 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: cert-app
-  namespace: argocd
+  namespace: dev
 spec:
   destination:
     namespace: dev
