--- a/cert-manager/cert.yaml
+++ b/cert-manager/cert.yaml
@@ -15,7 +15,7 @@ spec:
         - name: installCRDs
           value: "true"
         - name: replicaCount
-          value: 3
+          value: '3'
     repoURL: https://charts.jetstack.io
     targetRevision: v1.3.1
   syncPolicy:
