--- a/external-secrets/external-secrets.yaml
+++ b/external-secrets/external-secrets.yaml
@@ -2,9 +2,9 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: external-secrets-application
+  namespace: argocd
 spec:
   destination:
-    name: ''
     namespace: dev
     server: 'https://kubernetes.default.svc'
   source:
