--- a/hashicorp-vault/hashicorp-vault.yaml
+++ b/hashicorp-vault/hashicorp-vault.yaml
@@ -2,10 +2,11 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: hashicorp-vault
+  namespace: argocd   # namespace where the argocd server is running
 spec:
   destination:
     name: ''
-    namespace: dev
+    namespace: dev     # namespace where the application should deploy
     server: 'https://kubernetes.default.svc'
   source:
     path: .
