--- a/hashicorp-vault/hashicorp-vault.yaml
+++ b/hashicorp-vault/hashicorp-vault.yaml
@@ -21,5 +21,8 @@ spec:
   sources: []
   project: default
   syncPolicy:
+  automated:
+      prune: false
+      selfHeal: true
     syncOptions:
       - CreateNamespace=true
