--- a/external-secrets/external-secrets.yaml
+++ b/external-secrets/external-secrets.yaml
@@ -22,6 +22,6 @@ spec:
   syncPolicy:
     automated:
       prune: false
-      selfHeal: false
+      selfHeal: true
     syncOptions:
       - CreateNamespace=true
