--- a/application/hashicorp-vault.yaml
+++ b/application/hashicorp-vault.yaml
@@ -20,8 +20,8 @@ spec:
   sources: []
   project: default
   syncPolicy:
-  automated:
-      prune: false
-      selfHeal: true
+  # automated:
+  #     prune: false
+  #     selfHeal: true
     syncOptions:
       - CreateNamespace=true
