--- a/application/hashicorp-vault.yaml
+++ b/application/hashicorp-vault.yaml
@@ -2,26 +2,18 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: hashicorp-vault
-  namespace: argocd   # namespace where the argocd server is running
 spec:
   destination:
-    namespace: qa     # namespace where the application should deploy
+    name: ''
+    namespace: qa
     server: 'https://kubernetes.default.svc'
   source:
     path: .
     repoURL: 'https://github.com/hashicorp/vault-helm.git'
     targetRevision: HEAD
-    # helm:
-    #   valueFiles:
-    #     - values.yaml
-    #   parameters:
-    #     - name: injector.replicas
-    #       value: '2'
+    helm:
+      parameters:
+        - name: injector.replicas
+          value: '3'
   sources: []
   project: default
-  syncPolicy:
-  # automated:
-  #     prune: false
-  #     selfHeal: true
-    syncOptions:
-      - CreateNamespace=true
