--- a/application/hashicorp-vault.yaml
+++ b/application/hashicorp-vault.yaml
@@ -2,9 +2,9 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: hashicorp-vault
+  namespace: argocd
 spec:
   destination:
-    name: ''
     namespace: qa
     server: 'https://kubernetes.default.svc'
   source:
