--- a/application/hashicorp-vault.yaml
+++ b/application/hashicorp-vault.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: argocd
 spec:
   destination:
-    namespace: dev
+    namespace: qa
     server: 'https://kubernetes.default.svc'
   source:
     path: .
