--- a/application/hashicorp-vault.yaml
+++ b/application/hashicorp-vault.yaml
@@ -11,10 +11,10 @@ spec:
     path: .
     repoURL: 'https://github.com/hashicorp/vault-helm.git'
     targetRevision: HEAD
-    helm:
-      parameters:
-        - name: injector.replicas
-          value: '3'
+    # helm:
+    #   parameters:
+    #     - name: injector.replicas
+    #       value: '3'
   sources: []
   project: default
   syncPolicy:
