--- a/application/hashicorp-vault.yaml
+++ b/application/hashicorp-vault.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: valult-app
+  name: vault-app
   namespace: argocd
 spec:
   destination:
