--- a/application/hashicorp-vault.yaml
+++ b/application/hashicorp-vault.yaml
@@ -20,6 +20,6 @@ spec:
   syncPolicy:
     automated:
       prune: false
-      selfHeal: true
+      selfHeal: false
     syncOptions:
       - CreateNamespace=true
